[package]
name = "agorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trotter = "0.6.0"
tokio = { version = "1.35.1", features = ["full"] }
colored = "2.1.0"
anyhow = "1.0.79"
ratatui = "0.25.0"
crossterm = "0.27.0"
